# rust-signalbool

./: Cargo.toml  LICENSE  README.md
examples/: crossplatform.rs  sigint.rs
src/: lib.rs  unix.rs  windows.rs
