[package]
name = "signalbool"
version = "0.2.1"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
license = "BSD-3-Clause"
keywords = ["signal", "SIGINT"]
description = "A simple crate to catch signals and set a boolean flag for later use."
documentation = "https://docs.rs/signalbool"
homepage = "https://github.com/lilydjwg/rust-signalbool"
repository = "https://github.com/lilydjwg/rust-signalbool"

[target.'cfg(not(windows))'.dependencies]
nix = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef"] }
kernel32-sys = "0.2"
